--- a/src/Components/Others/Calendar/NewDateOfBirthCalendar.module.scss
+++ b/src/Components/Others/Calendar/NewDateOfBirthCalendar.module.scss
@@ -6,18 +6,16 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 .calendarWrapper {
 	text-align: center;
 	max-width: 15rem;
-	max-height: 20rem;
 	background-color: white;
 	background-size: 100%;
 	padding: 1rem;
 	border-radius: 1rem;
 	position: absolute;
-	top: 20%;
-	bottom: 10%;
-	left: 20%;
-	right: 10%;
+	top: 0;
+	right: 0;
 	z-index: 1000;
 	color: black;
+	border: 1px solid black;
 
 	.closeCalendar {
 		display: inline-block;
