--- a/src/Components/Others/Calendar/NewCalendar.module.scss
+++ b/src/Components/Others/Calendar/NewCalendar.module.scss
@@ -6,7 +6,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 .calendarWrapper {
 	text-align: center;
 	max-width: 15rem;
-	max-height: 20rem;
+	max-height: 23rem;
 	background-color: white;
 	background-size: 100%;
 	padding: 1rem;
@@ -18,6 +18,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 	right: 10%;
 	z-index: 1000;
 	color: black;
+	border: 1px solid black;
 
 	.closeCalendar {
 		display: inline-block;
