--- a/src/Components/Others/Calendar/NewDateOfBirthCalendar.module.scss
+++ b/src/Components/Others/Calendar/NewDateOfBirthCalendar.module.scss
@@ -6,6 +6,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 .calendarWrapper {
 	text-align: center;
 	max-width: 15rem;
+	max-height: 23rem;
 	background-color: white;
 	background-size: 100%;
 	padding: 1rem;
